added improved index placeholders, renamed what-is-crmscript to index, edits

--- a/docs/00-custom/toc.yml
+++ b/docs/00-custom/toc.yml
@@ -2,7 +2,7 @@ items:
 - name: Introduction
   items:
   - name: What is CRMSCript?
-    href: ../overview/what-is-crmscript.md
+    href: ../overview/index.md
   - name: SuperOffice view of the world
     href: ../overview/domain.md
   - name: What can I do with CRMScript?
