#10 merged global functions and reformatted content, updated metadata

--- a/docs/api-reference/global-functions/toc.yml
+++ b/docs/api-reference/global-functions/toc.yml
@@ -4,26 +4,12 @@ items:
   href: addAction.md
 - name: AddChatMessage
   href: addChatMessage.md
-- name: AddChatMessage 14085
-  href: addChatMessage-14085.md
 - name: AddHtmlElement
   href: addHtmlElement.md
-- name: AddHtmlElement 7404
-  href: addHtmlElement-7404.md
-- name: AddHtmlElement 8770
-  href: addHtmlElement-8770.md
-- name: AddHtmlElement 9115
-  href: addHtmlElement-9115.md
 - name: Assert
   href: assert.md
 - name: AssertEquals
   href: assertEquals.md
-- name: AssertEquals 4103
-  href: assertEquals-4103.md
-- name: AssertEquals 4619
-  href: assertEquals-4619.md
-- name: AssertEquals 4967
-  href: assertEquals-4967.md
 - name: Bool
   href: Bool.md
 - name: BuildUrl
@@ -42,16 +28,8 @@ items:
   href: copyCRMDocumentToAttachment.md
 - name: Date
   href: Date.md
-- name: Date 1954
-  href: Date-1954.md
 - name: DateTime
   href: DateTime.md
-- name: DateTime 2498
-  href: DateTime-2498.md
-- name: DateTime 6363
-  href: DateTime-6363.md
-- name: DateTime 7434
-  href: DateTime-7434.md
 - name: DebugWait
   href: debugWait.md
 - name: DecodeBase64
@@ -64,12 +42,6 @@ items:
   href: enableDebug.md
 - name: EncodeBase64
   href: encodeBase64.md
-- name: EncodeBase64 3074
-  href: encodeBase64-3074.md
-- name: EncodeBase64 4366
-  href: encodeBase64-4366.md
-- name: EncodeBase64 4559
-  href: encodeBase64-4559.md
 - name: EncodeHMACSHA1
   href: encodeHMACSHA1.md
 - name: EncodeHMACSHA256
@@ -94,10 +66,6 @@ items:
   href: findReplyTemplateToMerge.md
 - name: Float
   href: Float.md
-- name: Float 2408
-  href: Float-2408.md
-- name: Float 2429
-  href: Float-2429.md
 - name: FlushCaches
   href: flushCaches.md
 - name: ForwardMail
@@ -192,8 +160,6 @@ items:
   href: getHttpHeader.md
 - name: GetLanguageVariable
   href: getLanguageVariable.md
-- name: GetLanguageVariable 5588
-  href: getLanguageVariable-5588.md
 - name: GetLocalTimeZone
   href: getLocalTimeZone.md
 - name: GetMainMenu
@@ -206,14 +172,10 @@ items:
   href: getParser.md
 - name: GetParserParameter
   href: getParserParameter.md
-- name: GetParserParameter 5553
-  href: getParserParameter-5553.md
 - name: GetParserParameterCount
   href: getParserParameterCount.md
 - name: GetParserVariable
   href: getParserVariable.md
-- name: GetParserVariable 5038
-  href: getParserVariable-5038.md
 - name: GetParserVariableAsCSV
   href: getParserVariableAsCSV.md
 - name: GetParserVariableCount
@@ -290,8 +252,6 @@ items:
   href: idToLang.md
 - name: Integer
   href: Integer.md
-- name: Integer 2753
-  href: Integer-2753.md
 - name: InvoiceTypesExists
   href: invoiceTypesExists.md
 - name: IsValidPhoneNumber
@@ -306,18 +266,12 @@ items:
   href: logMessage.md
 - name: MacroParameter
   href: MacroParameter.md
-- name: MacroParameter 9296
-  href: MacroParameter-9296.md
 - name: MacroReturnValue
   href: MacroReturnValue.md
 - name: MakePassword
   href: makePassword.md
-- name: MakePassword 4832
-  href: makePassword-4832.md
 - name: Map
   href: Map.md
-- name: Map 1801
-  href: Map-1801.md
 - name: MapValue
   href: mapValue.md
 - name: Modulo
@@ -334,8 +288,6 @@ items:
   href: print.md
 - name: PrintBinary
   href: printBinary.md
-- name: PrintBinary 3049
-  href: printBinary-3049.md
 - name: PrintDebug
   href: printDebug.md
 - name: PrintLine
@@ -350,10 +302,8 @@ items:
   href: resetChat.md
 - name: RunProgram
   href: runProgram.md
-- name: RunProgram 3083
-  href: runProgram-3083.md
-- name: 'SaveAllCgiAttachments '
-  href: saveAllCgiAttachments .md
+- name: SaveAllCgiAttachments
+  href: saveAllCgiAttachments.md
 - name: SaveCgiAttachment
   href: saveCgiAttachment.md
 - name: SetChatStatus
@@ -380,8 +330,6 @@ items:
   href: setParserVariable.md
 - name: SetSessionVariable
   href: setSessionVariable.md
-- name: SetSessionVariable 4753
-  href: setSessionVariable-4753.md
 - name: SetUserIsTyping
   href: setUserIsTyping.md
 - name: SetVariable
@@ -392,21 +340,9 @@ items:
   href: sleep.md
 - name: String
   href: String.md
-- name: String 2579
-  href: String-2579.md
-- name: String 3135
-  href: String-3135.md
-- name: String 4505
-  href: String-4505.md
-- name: String 4698
-  href: String-4698.md
 - name: Time
   href: Time.md
-- name: Time 1773
-  href: Time-1773.md
 - name: Vector
   href: Vector.md
 - name: XMLNode
   href: XMLNode.md
-- name: XMLNode 2460
-  href: XMLNode-2460.md
