--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "./blueprint-templates",
         "~/templates/superoffice/blueprint",
         "/C:/code/planningdocs/templates/superoffice/blueprint"
-    ]
+    ],
+    "git.ignoreLimitWarning": true
 }
