#10 merged class methods A-M and reformatted content, updated metadata

--- a/docs/api-reference/classes/toc.yml
+++ b/docs/api-reference/classes/toc.yml
@@ -26,8 +26,6 @@ items:
     href: Attachment/Attachment.md
   - name: Dump
     href: Attachment/dump.md
-  - name: Dump 883
-    href: Attachment/Dump-883.md
   - name: GetBase64
     href: Attachment/getBase64.md
   - name: GetDownloadUrl
@@ -64,8 +62,6 @@ items:
     href: Byte/toBool.md
   - name: ToHex
     href: Byte/toHex.md
-  - name: ToHex 3040
-    href: Byte/toHex-3040.md
   - name: ToInteger
     href: Byte/toInteger.md
   - name: ToString
@@ -130,12 +126,10 @@ items:
   - name: ToParser
     href: Company/toParser.md
 - name: Customer
-  href: Customer/addEmail-6828.md
+  href: Customer/customer.md
   items:
   - name: AddEmail
     href: Customer/addEmail.md
-  - name: AddEmail 6828
-    href: Customer/addEmail-6828.md
   - name: CheckFieldRights
     href: Customer/checkFieldRights.md
   - name: CheckTableRights
@@ -144,8 +138,6 @@ items:
     href: Customer/Customer.md
   - name: FindExternallyFromEmail
     href: Customer/findExternallyFromEmail.md
-  - name: FindExternallyFromEmail 3705
-    href: Customer/findExternallyFromEmail-3705.md
   - name: FindExternallyFromKey
     href: Customer/findExternallyFromKey.md
   - name: FindFromAgentAndKey
@@ -172,8 +164,6 @@ items:
     href: Customer/removeExternalEmails.md
   - name: Save
     href: Customer/save.md
-  - name: Save 3575
-    href: Customer/save-3575.md
   - name: SetValue
     href: Customer/setValue.md
   - name: ToParser
@@ -270,12 +260,6 @@ items:
     href: DateTime/setUnix.md
   - name: ToString
     href: DateTime/toString.md
-  - name: ToString 2914
-    href: DateTime/toString-2914.md
-  - name: ToString 5844
-    href: DateTime/toString-5844.md
-  - name: ToString 5886
-    href: DateTime/toString-5886.md
 - name: DbConverter
   href: DbConverter/DbConverter.md
   items:
@@ -446,8 +430,6 @@ items:
     href: ExtraTable/loadFromAgentAndKey.md
   - name: Save
     href: ExtraTable/save.md
-  - name: Save 2321
-    href: ExtraTable/save-2321.md
   - name: SetValue
     href: ExtraTable/setValue.md
 - name: ExtraTableInfo
@@ -472,8 +454,6 @@ items:
     href: FHBitSet/getBitNo.md
   - name: Set
     href: FHBitSet/set.md
-  - name: Set 1837
-    href: FHBitSet/set-1837.md
   - name: SetBitNo
     href: FHBitSet/setBitNo.md
   - name: ToInteger
@@ -493,8 +473,6 @@ items:
     href: File/flush.md
   - name: Open
     href: File/open.md
-  - name: Open 5162
-    href: File/open-5162.md
   - name: ReadAll
     href: File/readAll.md
   - name: ReadBinary
@@ -525,7 +503,7 @@ items:
   - name: ToString
     href: Float/toString.md
 - name: Generic
-  href: Generic/convertGenericToString.md
+  href: Generic/Generic.md
   items:
   - name: ConvertGenericToString
     href: Generic/convertGenericToString.md
@@ -553,8 +531,6 @@ items:
     href: Generic/GenericToTimeSpan.md
   - name: GetGenericValue
     href: Generic/getGenericValue.md
-  - name: GetGenericValue 3424
-    href: Generic/getGenericValue-3424.md
   - name: GetStructMembers
     href: Generic/getStructMembers.md
   - name: GetTypeDimensions
@@ -566,7 +542,7 @@ items:
   - name: TypeIsStruct
     href: Generic/typeIsStruct.md
 - name: GenericSearch
-  href: GenericSearch/addComparison.md
+  href: GenericSearch/GenericSearch.md
   items:
   - name: AddComparison
     href: GenericSearch/addComparison.md
@@ -574,8 +550,6 @@ items:
     href: GenericSearch/addCriteria.md
   - name: AddField
     href: GenericSearch/addField.md
-  - name: AddField 4213
-    href: GenericSearch/addField-4213.md
   - name: AddOrder
     href: GenericSearch/addOrder.md
   - name: CountRows
@@ -590,8 +564,6 @@ items:
     href: GenericSearch/GenericSearch.md
   - name: Get
     href: GenericSearch/get.md
-  - name: Get 3981
-    href: GenericSearch/get-3981.md
   - name: Next
     href: GenericSearch/next.md
   - name: SetLanguage
@@ -609,8 +581,6 @@ items:
     href: HtmlElement/getNextTabIndex.md
   - name: GetTabIndexString
     href: HtmlElement/getTabIndexString.md
-  - name: GetTabIndexString 3300
-    href: HtmlElement/getTabIndexString-3300.md
   - name: GetTypeName
     href: HtmlElement/getTypeName.md
   - name: IsEmpty
@@ -708,8 +678,6 @@ items:
     href: Integer/toBool.md
   - name: ToHex
     href: Integer/toHex.md
-  - name: ToHex 2174
-    href: Integer/toHex-2174.md
   - name: ToString
     href: Integer/toString.md
 - name: InvoiceEntry
@@ -864,22 +832,12 @@ items:
   - name: SetName
     href: MacroReturnValue/setName.md
 - name: MainMenu
-  href: MainMenu/addGroup-4176.md
+  href: MainMenu/index.md
   items:
   - name: AddGroup
     href: MainMenu/addGroup.md
-  - name: AddGroup 4176
-    href: MainMenu/addGroup-4176.md
-  - name: AddGroup 5477
-    href: MainMenu/addGroup-5477.md
   - name: AddItem
     href: MainMenu/addItem.md
-  - name: AddItem 10733
-    href: MainMenu/addItem-10733.md
-  - name: AddItem 12204
-    href: MainMenu/addItem-12204.md
-  - name: AddItem 6558
-    href: MainMenu/addItem-6558.md
   - name: Clear
     href: MainMenu/clear.md
   - name: DeleteGroup
@@ -919,8 +877,6 @@ items:
     href: Map/getVal.md
   - name: IncreaseValueForKey
     href: Map/increaseValueForKey.md
-  - name: IncreaseValueForKey 4268
-    href: Map/increaseValueForKey-4268.md
   - name: Insert
     href: Map/insert.md
   - name: Map
@@ -950,22 +906,10 @@ items:
     href: Message/Message.md
   - name: Save
     href: Message/save.md
-  - name: Save 2247
-    href: Message/save-2247.md
-  - name: Save 3666
-    href: Message/save-3666.md
   - name: SaveInvolved
     href: Message/saveInvolved.md
-  - name: SaveInvolved 3790
-    href: Message/saveInvolved-3790.md
   - name: Send
     href: Message/send.md
-  - name: Send 3785
-    href: Message/send-3785.md
-  - name: Send 5276
-    href: Message/send-5276.md
-  - name: Send 7133
-    href: Message/send-7133.md
   - name: SendFacebook
     href: Message/sendFacebook.md
   - name: SendSms
