#10 merged class methods P-Y and reformatted content, updated metadata, created includes for SearchEngine tables

--- a/docs/api-reference/classes/toc.yml
+++ b/docs/api-reference/classes/toc.yml
@@ -19587,7 +19587,7 @@ items:
   - name: Profile
     href: Profile/Profile.md
 - name: ReplyTemplate
-  href: ReplyTemplate/getAttachments.md
+  href: ReplyTemplate/ReplyTemplate.md
   items:
   - name: GetAttachments
     href: ReplyTemplate/getAttachments.md
@@ -19606,44 +19606,28 @@ items:
   - name: ReplyTemplate
     href: ReplyTemplate/ReplyTemplate.md
 - name: SearchEngine
-  href: SearchEngine/addComparison-12494.md
+  href: SearchEngine/SearchEngine.md
   items:
   - name: AddComparison
     href: SearchEngine/addComparison.md
-  - name: AddComparison 12494
-    href: SearchEngine/addComparison-12494.md
   - name: AddCriteria
     href: SearchEngine/addCriteria.md
-  - name: AddCriteria 11364
-    href: SearchEngine/addCriteria-11364.md
-  - name: AddCriteria 4255
-    href: SearchEngine/addCriteria-4255.md
   - name: AddData
     href: SearchEngine/addData.md
   - name: AddDataField
     href: SearchEngine/addDataField.md
-  - name: AddDataField 5374
-    href: SearchEngine/addDataField-5374.md
   - name: AddField
     href: SearchEngine/addField.md
-  - name: AddField 3642
-    href: SearchEngine/addField-3642.md
   - name: AddFields
     href: SearchEngine/addFields.md
   - name: AddHaving
     href: SearchEngine/addHaving.md
-  - name: AddHaving 10708
-    href: SearchEngine/addHaving-10708.md
   - name: AddJoinCriteria
     href: SearchEngine/addJoinCriteria.md
   - name: AddOrder
     href: SearchEngine/addOrder.md
-  - name: AddOrder 5552
-    href: SearchEngine/addOrder-5552.md
   - name: BuildSql
     href: SearchEngine/buildSql.md
-  - name: BuildSql 2399
-    href: SearchEngine/buildSql-2399.md
   - name: BypassNetServer
     href: SearchEngine/bypassNetServer.md
   - name: CountColumns
@@ -19676,10 +19660,6 @@ items:
     href: SearchEngine/first.md
   - name: GetField
     href: SearchEngine/getField.md
-  - name: GetField 2628
-    href: SearchEngine/getField-2628.md
-  - name: GetField 4336
-    href: SearchEngine/getField-4336.md
   - name: GetFieldsJSON
     href: SearchEngine/getFieldsJSON.md
   - name: Insert
@@ -19791,24 +19771,18 @@ items:
   - name: SpmStaticList
     href: SpmStaticList/SpmStaticList.md
 - name: StatLib
-  href: StatLib/addAggregate-11240.md
+  href: StatLib/StatLib.md
   items:
   - name: AddAggregate
     href: StatLib/addAggregate.md
-  - name: AddAggregate 11240
-    href: StatLib/addAggregate-11240.md
   - name: AddCallback
     href: StatLib/addCallback.md
   - name: AddGroup
     href: StatLib/addGroup.md
-  - name: AddGroup 4956
-    href: StatLib/addGroup-4956.md
   - name: DropOrder
     href: StatLib/dropOrder.md
   - name: Execute
     href: StatLib/execute.md
-  - name: Execute 2582
-    href: StatLib/execute-2582.md
   - name: SetGenericSearch
     href: StatLib/setGenericSearch.md
   - name: SetName
@@ -19822,7 +19796,7 @@ items:
   - name: StatLib
     href: StatLib/StatLib.md
 - name: StatResult
-  href: StatResult/atGroupBegin.md
+  href: StatResult/StatResult.md
   items:
   - name: AtGroupBegin
     href: StatResult/atGroupBegin.md
@@ -19834,8 +19808,6 @@ items:
     href: StatResult/eof.md
   - name: GetField
     href: StatResult/getField.md
-  - name: GetField 2727
-    href: StatResult/getField-2727.md
   - name: Next
     href: StatResult/next.md
   - name: Rewind
@@ -19845,7 +19817,7 @@ items:
   - name: StatResult
     href: StatResult/StatResult.md
 - name: String
-  href: String/after.md
+  href: String/String.md
   items:
   - name: After
     href: String/after.md
@@ -19853,8 +19825,6 @@ items:
     href: String/afterLast.md
   - name: Append
     href: String/append.md
-  - name: Append 3073
-    href: String/append-3073.md
   - name: Before
     href: String/before.md
   - name: BeforeLast
@@ -20001,7 +19971,7 @@ items:
   - name: StringMatrix
     href: StringMatrix/StringMatrix.md
 - name: Ticket
-  href: Ticket/addSecondaryCustomers.md
+  href: Ticket/Ticket.md
   items:
   - name: AddSecondaryCustomers
     href: Ticket/addSecondaryCustomers.md
@@ -20011,8 +19981,6 @@ items:
     href: Ticket/checkEscalating.md
   - name: Delegate
     href: Ticket/delegate.md
-  - name: Delegate 2844
-    href: Ticket/delegate-2844.md
   - name: GetInvolvedOnly
     href: Ticket/getInvolvedOnly.md
   - name: GetMailFrom
@@ -20027,18 +19995,10 @@ items:
     href: Ticket/load.md
   - name: Log
     href: Ticket/log.md
-  - name: Log 3314
-    href: Ticket/log-3314.md
   - name: NotifyEmail
     href: Ticket/notifyEmail.md
   - name: Save
     href: Ticket/save.md
-  - name: Save 2546
-    href: Ticket/save-2546.md
-  - name: Save 5563
-    href: Ticket/save-5563.md
-  - name: Save 6624
-    href: Ticket/save-6624.md
   - name: SendMessages
     href: Ticket/sendMessages.md
   - name: SetValue
