#10 merged more NS class methods and reformatted content, updated metadata

--- a/docs/api-reference/classes/toc.yml
+++ b/docs/api-reference/classes/toc.yml
@@ -2419,14 +2419,10 @@ items:
     href: NSArchiveRestrictionInfo/SetDisplayValues.md
   - name: SetInterOperator
     href: NSArchiveRestrictionInfo/SetInterOperator.md
-  - name: SetInterOperator 5058
-    href: NSArchiveRestrictionInfo/SetInterOperator-5058.md
   - name: SetInterParenthesis
     href: NSArchiveRestrictionInfo/SetInterParenthesis.md
   - name: SetIsActive
     href: NSArchiveRestrictionInfo/SetIsActive.md
-  - name: SetIsActive 2503
-    href: NSArchiveRestrictionInfo/SetIsActive-2503.md
   - name: SetName
     href: NSArchiveRestrictionInfo/SetName.md
   - name: SetOperator
@@ -2522,7 +2518,7 @@ items:
   - name: SetUserName
     href: NSAssociate/SetUserName.md
 - name: NSAssociateAgent
-  href: NSAssociateAgent/GetAssociate.md
+  href: NSAssociateAgent/NSAssociateAgent.md
   items:
   - name: GetAssociate
     href: NSAssociateAgent/GetAssociate.md
@@ -2530,8 +2526,6 @@ items:
     href: NSAssociateAgent/GetAssociateByPersonId.md
   - name: GetAssociateList
     href: NSAssociateAgent/GetAssociateList.md
-  - name: GetAssociateList 5596
-    href: NSAssociateAgent/GetAssociateList-5596.md
   - name: GetAssociatesByGroup
     href: NSAssociateAgent/GetAssociatesByGroup.md
   - name: GetNote
@@ -2572,7 +2566,7 @@ items:
   - name: SetName
     href: NSAttachmentEntity/SetName.md
 - name: NSAudienceAgent
-  href: NSAudienceAgent/CreateDefaultAudienceLayoutEntity.md
+  href: NSAudienceAgent/NSAudienceAgent.md
   items:
   - name: CreateDefaultAudienceLayoutEntity
     href: NSAudienceAgent/CreateDefaultAudienceLayoutEntity.md
@@ -2616,8 +2610,6 @@ items:
     href: NSAudienceAgent/GetMyConfigParameterValue.md
   - name: NSAudienceAgent
     href: NSAudienceAgent/NSAudienceAgent.md
-  - name: SaveAudienceLayoutEntit 7358
-    href: NSAudienceAgent/SaveAudienceLayoutEntit-7358.md
   - name: SaveAudienceLayoutEntity
     href: NSAudienceAgent/SaveAudienceLayoutEntity.md
   - name: SaveConfigParameter
@@ -2794,8 +2786,6 @@ items:
     href: NSBatchTaskInfo/SetName.md
   - name: SetParameterObject
     href: NSBatchTaskInfo/SetParameterObject.md
-  - name: SetParameterObject 5580
-    href: NSBatchTaskInfo/SetParameterObject-5580.md
   - name: SetProgressDescription
     href: NSBatchTaskInfo/SetProgressDescription.md
   - name: SetProgressPercent
@@ -2811,7 +2801,7 @@ items:
   - name: SetState
     href: NSBatchTaskInfo/SetState.md
 - name: NSBLOBAgent
-  href: NSBLOBAgent/ChangeContactImage.md
+  href: NSBLOBAgent/NSBLOBAgent.md
   items:
   - name: ChangeContactImage
     href: NSBLOBAgent/ChangeContactImage.md
@@ -2869,8 +2859,6 @@ items:
     href: NSBLOBAgent/NSBLOBAgent.md
   - name: SaveBlobEntity
     href: NSBLOBAgent/SaveBlobEntity.md
-  - name: SaveBlobEntity 4199
-    href: NSBLOBAgent/SaveBlobEntity-4199.md
   - name: SaveImageStream
     href: NSBLOBAgent/SaveImageStream.md
   - name: SaveProjectImage
@@ -3809,7 +3797,7 @@ items:
   - name: SetValue
     href: NSCompetitor/SetValue.md
 - name: NSConfigurationAgent
-  href: NSConfigurationAgent/ClearConfigurationCache.md
+  href: NSConfigurationAgent/NSConfigurationAgent.md
   items:
   - name: ClearConfigurationCache
     href: NSConfigurationAgent/ClearConfigurationCache.md
@@ -3867,8 +3855,6 @@ items:
     href: NSConfigurationAgent/GetWindowPosSize.md
   - name: GetWindowPosSizeList
     href: NSConfigurationAgent/GetWindowPosSizeList.md
-  - name: GetWindowPosSizeList 6871
-    href: NSConfigurationAgent/GetWindowPosSizeList-6871.md
   - name: GetWindowPosSizesOnAssociateId
     href: NSConfigurationAgent/GetWindowPosSizesOnAssociateId.md
   - name: GetWindowPosSizesOnPersonId
@@ -3881,8 +3867,6 @@ items:
     href: NSConfigurationAgent/NSConfigurationAgent.md
   - name: SaveDiaryViewEntity
     href: NSConfigurationAgent/SaveDiaryViewEntity.md
-  - name: SaveDiaryViewEntity 5798
-    href: NSConfigurationAgent/SaveDiaryViewEntity-5798.md
   - name: SaveSystemEventEntity
     href: NSConfigurationAgent/SaveSystemEventEntity.md
   - name: SaveWindowPosSize
@@ -4246,12 +4230,8 @@ items:
     href: NSContactAgent/DeleteExpired.md
   - name: GetAddress
     href: NSContactAgent/GetAddress.md
-  - name: GetAddress 3953
-    href: NSContactAgent/GetAddress-3953.md
   - name: GetAddressByCountry
     href: NSContactAgent/GetAddressByCountry.md
-  - name: GetAddressByCountry 5883
-    href: NSContactAgent/GetAddressByCountry-5883.md
   - name: GetContact
     href: NSContactAgent/GetContact.md
   - name: GetContactEntity
@@ -4290,8 +4270,6 @@ items:
     href: NSContactAgent/NSContactAgent.md
   - name: SaveContactEntity
     href: NSContactAgent/SaveContactEntity.md
-  - name: SaveContactEntity 5198
-    href: NSContactAgent/SaveContactEntity-5198.md
   - name: SaveQuoteVersionAddress
     href: NSContactAgent/SaveQuoteVersionAddress.md
   - name: SetDuplicateRulesStatus
@@ -4301,7 +4279,7 @@ items:
   - name: ValidateContactEntity
     href: NSContactAgent/ValidateContactEntity.md
 - name: NSContactEntity
-  href: NSContactEntity/GetActiveErpLinks.md
+  href: NSContactEntity/NSContactEntity.md
   items:
   - name: GetActiveErpLinks
     href: NSContactEntity/GetActiveErpLinks.md
@@ -4399,8 +4377,6 @@ items:
     href: NSContactEntity/SetActiveStatusMonitorId.md
   - name: SetAddress
     href: NSContactEntity/SetAddress.md
-  - name: SetAddress 3649
-    href: NSContactEntity/SetAddress-3649.md
   - name: SetAssociate
     href: NSContactEntity/SetAssociate.md
   - name: SetBounceEmails
@@ -5172,8 +5148,6 @@ items:
     href: NSCustomerServiceAgent/GetSmsConfig.md
   - name: GetStatistics
     href: NSCustomerServiceAgent/GetStatistics.md
-  - name: GetStatistics 7086
-    href: NSCustomerServiceAgent/GetStatistics-7086.md
   - name: HasChatNotify
     href: NSCustomerServiceAgent/HasChatNotify.md
   - name: NSCustomerServiceAgent
@@ -5929,8 +5903,6 @@ items:
     href: NSDocumentEntity/SetHeader.md
   - name: SetIsPublished
     href: NSDocumentEntity/SetIsPublished.md
-  - name: SetIsPublished 2519
-    href: NSDocumentEntity/SetIsPublished-2519.md
   - name: SetLinks
     href: NSDocumentEntity/SetLinks.md
   - name: SetLockSemantics
@@ -6023,8 +5995,6 @@ items:
     href: NSDocumentTemplate/SetDeleted.md
   - name: SetDirection
     href: NSDocumentTemplate/SetDirection.md
-  - name: SetDirection 4486
-    href: NSDocumentTemplate/SetDirection-4486.md
   - name: SetDocumentTemplateId
     href: NSDocumentTemplate/SetDocumentTemplateId.md
   - name: SetFilename
@@ -6102,8 +6072,6 @@ items:
     href: NSDocumentTemplateEntity/SetDeleted.md
   - name: SetDirection
     href: NSDocumentTemplateEntity/SetDirection.md
-  - name: SetDirection 4486
-    href: NSDocumentTemplateEntity/SetDirection-4486.md
   - name: SetDocumentTemplateId
     href: NSDocumentTemplateEntity/SetDocumentTemplateId.md
   - name: SetDocumentTypeKey
@@ -6400,8 +6368,6 @@ items:
     href: NSEMailAgent/GetEMailFromDocumentIdWithoutAttachmentStream.md
   - name: GetEMailFromId
     href: NSEMailAgent/GetEMailFromId.md
-  - name: GetEMailFromId 14843
-    href: NSEMailAgent/GetEMailFromId-14843.md
   - name: GetEMailFromTemp
     href: NSEMailAgent/GetEMailFromTemp.md
   - name: GetEmailMessageIds
@@ -7113,8 +7079,6 @@ items:
     href: NSErpSyncAgent/CreateDefaultErpSyncConnectorEntity.md
   - name: CreateErpActorFromCrm
     href: NSErpSyncAgent/CreateErpActorFromCrm.md
-  - name: CreateErpActorFromCrm 14216
-    href: NSErpSyncAgent/CreateErpActorFromCrm-14216.md
   - name: DeleteConnection
     href: NSErpSyncAgent/DeleteConnection.md
   - name: DeleteErpSyncConnectorEntity
@@ -7147,8 +7111,6 @@ items:
     href: NSErpSyncAgent/GetDefaultValueInfo.md
   - name: GetEngineStatus
     href: NSErpSyncAgent/GetEngineStatus.md
-  - name: GetErpConnectionConfigF 6900
-    href: NSErpSyncAgent/GetErpConnectionConfigF-6900.md
   - name: GetErpConnectionConfigFields
     href: NSErpSyncAgent/GetErpConnectionConfigFields.md
   - name: GetErpFieldValues
@@ -7185,8 +7147,6 @@ items:
     href: NSErpSyncAgent/SyncAll.md
   - name: TestConnectionByConfig
     href: NSErpSyncAgent/TestConnectionByConfig.md
-  - name: TestConnectionByConfig 8054
-    href: NSErpSyncAgent/TestConnectionByConfig-8054.md
   - name: TestConnectionById
     href: NSErpSyncAgent/TestConnectionById.md
   - name: TestConnectorUrl
@@ -8375,8 +8335,6 @@ items:
     href: NSForeignSystemAgent/SaveDeviceByIdentifier.md
   - name: SaveForeignAppEntity
     href: NSForeignSystemAgent/SaveForeignAppEntity.md
-  - name: SaveForeignAppEntity 6059
-    href: NSForeignSystemAgent/SaveForeignAppEntity-6059.md
   - name: SaveForeignDevice
     href: NSForeignSystemAgent/SaveForeignDevice.md
   - name: SaveForeignKey
@@ -9345,8 +9303,6 @@ items:
     href: NSListAgent/GetDocumentTemplateLanguages.md
   - name: GetDocumentTemplateList
     href: NSListAgent/GetDocumentTemplateList.md
-  - name: GetDocumentTemplateProp 10390
-    href: NSListAgent/GetDocumentTemplateProp-10390.md
   - name: GetDocumentTemplateProperties
     href: NSListAgent/GetDocumentTemplateProperties.md
   - name: GetDocumentTemplates
@@ -9429,8 +9385,6 @@ items:
     href: NSListAgent/GetLocalizedTextsByLanguageId.md
   - name: GetLocalizedTextsByType
     href: NSListAgent/GetLocalizedTextsByType.md
-  - name: GetLocalizedTextsByType 6066
-    href: NSListAgent/GetLocalizedTextsByType-6066.md
   - name: GetMrMrs
     href: NSListAgent/GetMrMrs.md
   - name: GetMrMrses
@@ -10267,8 +10221,6 @@ items:
     href: NSModuleLicense/SetIsHidden.md
   - name: SetLicenseType
     href: NSModuleLicense/SetLicenseType.md
-  - name: SetLicenseType 4383
-    href: NSModuleLicense/SetLicenseType-4383.md
   - name: SetModuleDescription
     href: NSModuleLicense/SetModuleDescription.md
   - name: SetModuleName
@@ -10873,12 +10825,8 @@ items:
     href: NSPersonAgent/DeleteTemporaryKeysOfDomain.md
   - name: GetAddress
     href: NSPersonAgent/GetAddress.md
-  - name: GetAddress 3953
-    href: NSPersonAgent/GetAddress-3953.md
   - name: GetAddressByCountry
     href: NSPersonAgent/GetAddressByCountry.md
-  - name: GetAddressByCountry 5883
-    href: NSPersonAgent/GetAddressByCountry-5883.md
   - name: GetBestSoLanguageForTemplate
     href: NSPersonAgent/GetBestSoLanguageForTemplate.md
   - name: GetColleagues
@@ -10935,8 +10883,6 @@ items:
     href: NSPersonAgent/SaveConsentPerson.md
   - name: SavePersonEntity
     href: NSPersonAgent/SavePersonEntity.md
-  - name: SavePersonEntity 4943
-    href: NSPersonAgent/SavePersonEntity-4943.md
   - name: SendConsentConfirmationEmail
     href: NSPersonAgent/SendConsentConfirmationEmail.md
   - name: SetConsent
@@ -11088,8 +11034,6 @@ items:
     href: NSPersonEntity/SetActiveInterests.md
   - name: SetAddress
     href: NSPersonEntity/SetAddress.md
-  - name: SetAddress 3649
-    href: NSPersonEntity/SetAddress-3649.md
   - name: SetAssociate
     href: NSPersonEntity/SetAssociate.md
   - name: SetBirthDate
@@ -11399,12 +11343,10 @@ items:
   - name: SetUserExplanation
     href: NSPluginUrlResponse/SetUserExplanation.md
 - name: NSPocketAgent
-  href: NSPocketAgent/GetPocketStartupData-8204.md
+  href: NSPocketAgent/NSPocketAgent.md
   items:
   - name: GetPocketStartupData
     href: NSPocketAgent/GetPocketStartupData.md
-  - name: GetPocketStartupData 8204
-    href: NSPocketAgent/GetPocketStartupData-8204.md
   - name: GetPushNotificationTagsForDevice
     href: NSPocketAgent/GetPushNotificationTagsForDevice.md
   - name: GetRegisteredDevices
@@ -12380,12 +12322,8 @@ items:
     href: NSProjectAgent/OfferAutoNextStatusOnApppointmentCompleted.md
   - name: SaveProjectEntity
     href: NSProjectAgent/SaveProjectEntity.md
-  - name: SaveProjectEntity 5231
-    href: NSProjectAgent/SaveProjectEntity-5231.md
   - name: SaveProjectEventEntity
     href: NSProjectAgent/SaveProjectEventEntity.md
-  - name: SaveProjectEventEntity 6773
-    href: NSProjectAgent/SaveProjectEventEntity-6773.md
   - name: SaveProjectMember
     href: NSProjectAgent/SaveProjectMember.md
   - name: SaveProjectMembersFunctionAndComment
@@ -12493,8 +12431,6 @@ items:
     href: NSProjectEntity/SetImageDescription.md
   - name: SetIsPublished
     href: NSProjectEntity/SetIsPublished.md
-  - name: SetIsPublished 2519
-    href: NSProjectEntity/SetIsPublished-2519.md
   - name: SetLinks
     href: NSProjectEntity/SetLinks.md
   - name: SetName
@@ -13137,12 +13073,8 @@ items:
     href: NSQuoteAgent/GetAllQuoteLineConfigurations.md
   - name: GetConfigurationFields
     href: NSQuoteAgent/GetConfigurationFields.md
-  - name: GetConfigurationFields 8950
-    href: NSQuoteAgent/GetConfigurationFields-8950.md
   - name: GetConnection
     href: NSQuoteAgent/GetConnection.md
-  - name: GetConnectionConfigFiel 6836
-    href: NSQuoteAgent/GetConnectionConfigFiel-6836.md
   - name: GetConnectionConfigFields
     href: NSQuoteAgent/GetConnectionConfigFields.md
   - name: GetConnectionsForAssociate
@@ -13229,8 +13161,6 @@ items:
     href: NSQuoteAgent/RestoreConnection.md
   - name: SaveConnection
     href: NSQuoteAgent/SaveConnection.md
-  - name: SaveConnectionConfigFie 11001
-    href: NSQuoteAgent/SaveConnectionConfigFie-11001.md
   - name: SaveConnectionConfigFields
     href: NSQuoteAgent/SaveConnectionConfigFields.md
   - name: SavePriceList
@@ -13261,8 +13191,6 @@ items:
     href: NSQuoteAgent/SendQuoteVersion.md
   - name: TestConnection
     href: NSQuoteAgent/TestConnection.md
-  - name: TestConnection 8454
-    href: NSQuoteAgent/TestConnection-8454.md
   - name: ToggleProductInAssortment
     href: NSQuoteAgent/ToggleProductInAssortment.md
   - name: ToggleQuoteVersionAttachmentIncluded
@@ -14515,7 +14443,7 @@ items:
   - name: SetValue
     href: NSRelationToOwner/SetValue.md
 - name: NSReplicationAgent
-  href: NSReplicationAgent/CreateDefaultSatellite.md
+  href: NSReplicationAgent/NSReplicationAgent.md
   items:
   - name: CreateDefaultSatellite
     href: NSReplicationAgent/CreateDefaultSatellite.md
@@ -14523,8 +14451,6 @@ items:
     href: NSReplicationAgent/GetArea.md
   - name: GetAreaList
     href: NSReplicationAgent/GetAreaList.md
-  - name: GetAreaList 3955
-    href: NSReplicationAgent/GetAreaList-3955.md
   - name: GetCentralLicense
     href: NSReplicationAgent/GetCentralLicense.md
   - name: GetSatellite
@@ -14535,8 +14461,6 @@ items:
     href: NSReplicationAgent/SaveCentralLicense.md
   - name: SaveSatellite
     href: NSReplicationAgent/SaveSatellite.md
-  - name: SaveSatellite 3944
-    href: NSReplicationAgent/SaveSatellite-3944.md
   - name: SetFreetextSearchEnabledOnArea
     href: NSReplicationAgent/SetFreetextSearchEnabledOnArea.md
 - name: NSReplyTemplate
@@ -14587,8 +14511,6 @@ items:
     href: NSReportAgent/NSReportAgent.md
   - name: SaveReportEntity
     href: NSReportAgent/SaveReportEntity.md
-  - name: SaveReportLabelLayoutEn 8312
-    href: NSReportAgent/SaveReportLabelLayoutEn-8312.md
   - name: SaveReportLabelLayoutEntity
     href: NSReportAgent/SaveReportLabelLayoutEntity.md
   - name: UpdateFavorite
@@ -15125,8 +15047,6 @@ items:
     href: NSSaleAgent/OfferAutoNextStageOnApppointmentCompleted.md
   - name: SaveSaleEntity
     href: NSSaleAgent/SaveSaleEntity.md
-  - name: SaveSaleEntity 4217
-    href: NSSaleAgent/SaveSaleEntity-4217.md
   - name: SaveSaleStakeholder
     href: NSSaleAgent/SaveSaleStakeholder.md
   - name: SetAsLost
@@ -15266,8 +15186,6 @@ items:
     href: NSSaleEntity/SetHeading.md
   - name: SetIsPublished
     href: NSSaleEntity/SetIsPublished.md
-  - name: SetIsPublished 2519
-    href: NSSaleEntity/SetIsPublished-2519.md
   - name: SetLinks
     href: NSSaleEntity/SetLinks.md
   - name: SetNextDueDate
@@ -16002,8 +15920,6 @@ items:
     href: NSSelectionAgent/RemoveSelectionMembersFromSearch.md
   - name: SaveSelectionEntity
     href: NSSelectionAgent/SaveSelectionEntity.md
-  - name: SaveSelectionEntity 5852
-    href: NSSelectionAgent/SaveSelectionEntity-5852.md
   - name: SetDuplicateRulesStatus
     href: NSSelectionAgent/SetDuplicateRulesStatus.md
   - name: SetDynamicSelectionCriteria
@@ -19094,8 +19010,6 @@ items:
     href: NSUserGroup/NSUserGroup.md
   - name: SetDeleted
     href: NSUserGroup/SetDeleted.md
-  - name: SetDeleted 2955
-    href: NSUserGroup/SetDeleted-2955.md
   - name: SetId
     href: NSUserGroup/SetId.md
   - name: SetRank
@@ -19211,8 +19125,6 @@ items:
     href: NSVersionInfo/SetCheckedInByName.md
   - name: SetCheckedInDate
     href: NSVersionInfo/SetCheckedInDate.md
-  - name: SetCheckedInDate 2882
-    href: NSVersionInfo/SetCheckedInDate-2882.md
   - name: SetDescription
     href: NSVersionInfo/SetDescription.md
   - name: SetDisplayText
